# sbi-fuzz

./: Cargo.toml  Makefile  Readme.md  SYZKALLER_MIGRATION_PLAN.md  TODO.md
.cargo/: config.toml
common/: Cargo.toml
fuzzer/: build.rs
helper/: Cargo.toml
helper/src/: coverage.rs  instrumenter.rs  main.rs  minimizer.rs  runner.rs  scenario_generator.rs  seed_generator.rs  sequence_runner.rs
host_harness/: Cargo.toml  build.rs
host_harness/src/: lib.rs  opensbi.rs  rustsbi.rs
host_harness/src/native/: opensbi_host_shim.c  rustsbi_fdt_shim.c
host_harness/src/native/include/sbi/: riscv_asm.h
injector/: Makefile
scripts/: check-env.sh  check-opensbi-coverage.py  check-sbi-hang-stability.py  import-linux-sbi-corpus.py  minimize-sbi-hangs.py  replay-opensbi-results.py  replay-sbi-results.py  replay-sequence-results.py  report-opensbi-bugs.py  report-sbi-bugs.py  report-sequence-bugs.py  run-opensbi-sanitizer-demo.py  run-sbi-fuzz-campaign.py  run-sequence-campaign.py  sbi_results.py  summarize-replay-opensbi-results.py  summarize-replay-sbi-results.py  summarize-replay-sequence-results.py  test-import-linux-sbi-corpus.sh  test-opensbi-coverage.sh  test-replay-opensbi-results.sh  test-replay-sequence-results.sh  test-report-opensbi-bugs.sh  test-rustsbi-collect-coverage-timeout.sh  test-rustsbi-fuzz-finds-bug.sh  test-rustsbi-hang-minimize.sh  test-rustsbi-hang-stability.sh  test-rustsbi-helper-timeout.sh  test-rustsbi-replay.sh  test-sbi-hang-semantic-buckets.sh  test-summarize-replay-opensbi-results.sh  test-triage-opensbi-results.sh  triage-sbi-results.py  (+3 more)
(+18 files in other folders)
