[package]
name = "helper"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
host_harness = { path = "../host_harness" }
clap = { version = "4.5", features = ["derive"] }
libafl = "0.15.1"
libafl_bolts = "0.15.1"
libafl_qemu = { version = "0.15.1", features = [
    "riscv64",
    "systemmode",
], default-features = false }
libafl_targets = "0.15.1"
walkdir = "2.5.0"
regex = "1.11.1"
tempfile = "3.17.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"

[build-dependencies]
libafl_qemu_build = "0.15.1"
